This breaks the scroll bar on the captions but fixes the audio player length

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -163,6 +163,11 @@ form
 	padding: 5px;
 }
 
+#player {
+ width: 240px;
+}​
+
+
 #transcript
 {
 	color: black;
